<resources>
    <string name="app_name">edaixi</string>

    <string name="loginLabel">请登录</string>
    <string name="loginBtn">登录</string>
    <string name="phoneInput">手机号：</string>
    <string name="passInput">密码：</string>
    <string name="registerLink">还没账号，立即注册</string>
    <string name="forgetPass">忘记密码？</string>
    <string name="specification">输入验证码：</string>
    <string name="getSpecification">获取验证码</string>
    <string name="nextStep">下一步</string>
    <string name="inputPass">输入密码：</string>
    <string name="inputPassSec">确认密码：</string>
    <string name="complete">完成</string>
    <string name="professionalWashing">- 专业清洗 -</string>
    <string name="hotGoods">- 热门商品 -</string>
    <string name="washingClothes">洗衣</string>
    <string name="washingShoes">洗鞋</string>
    <string name="washingHomeCloth">洗家纺</string>
    <string name="washingSunBlind">洗窗帘</string>
    <string name="bottemXiyiBtn">洗衣</string>
    <string name="bottemOrderBtn">订单</string>
    <string name="bottemMyselfBtn">我的</string>
    <string name="bottemHomeBtn">我的订单</string>
    <string name="locationMgt">常用地址</string>
    <string name="cardMgt">会员卡</string>
    <string name="rechargeBtn">充值</string>
    <string name="uploadFile">上传证件</string>
    <string name="feedback">意见反馈</string>
    <string name="moreOpt">更多</string>
    <string name="customerServicePhone">客服电话</string>
    <string name="showCategory">- 洗衣 -</string>
    <string name="goToBook">预约洗衣</string>
    <string name="noProduct">亲爱的用户，暂时还没有商品哦！</string>
    <string name="hintForLocation">请选择或添加地址</string>
    <string name="hintForDate">请选择日期</string>
    <string name="hintForTime">请选择时间</string>
    <string name="idCardFrontTxt">- 身份证正面 -</string>
    <string name="idCardBackTxt">- 身份证反面 -</string>
    <string name="noOrder">亲爱的用户，暂时还没有订单哦！</string>
    <string name="title_activity_xiyi_pt">XiyiPtActivity</string>
</resources>
