<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bjtu.activity.RegisterActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/registerRole"
        android:id="@+id/registerRole" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerRole"
        android:hint="@string/phoneInput"
        android:id="@+id/regPhoneEdt"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regPhoneEdt"
        android:orientation="horizontal"
        android:id="@+id/specificationLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/specification"
            android:id="@+id/specificationEdt" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/getSpecification"
            android:id="@+id/getSpecificationBtn"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/specificationLayout"
        android:hint="@string/nextStep"
        android:background="@color/colorNext"
        android:id="@+id/nextStep"/>
</RelativeLayout>
