<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pt_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bjtu.activity.PTPageActivity">

    <LinearLayout
        android:id="@+id/ptFrameBottemView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        <LinearLayout
            android:id="@+id/xiyiPTLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/xiyiPTImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/xiyi"/>
            <TextView
                android:id="@+id/xiyiPTTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottemXiyiBtn"
                android:textColor="@color/changedBackground"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/orderPTLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/orderPTImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/order_list1"/>
            <TextView
                android:id="@+id/orderPTTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottemOrderBtn"
                android:textColor="@color/initBackground"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myselfPTLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/myselfPTImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/myself1"/>
            <TextView
                android:id="@+id/myselfPTTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottemMyselfBtn"
                android:textColor="@color/initBackground"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/ptFramePager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ptFrameBottemView">
    </android.support.v4.view.ViewPager>
</RelativeLayout>
