<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_qspage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bjtu.activity.QSPageActivity">
    <LinearLayout
        android:id="@+id/qsFrameBottemView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        <LinearLayout
            android:id="@+id/orderQSLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/orderQSImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/order_list"/>
            <TextView
                android:id="@+id/orderQSTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottemOrderBtn"
                android:textColor="@color/changedBackground"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/homeQSLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/homeQSImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/homepage1"/>
            <TextView
                android:id="@+id/homeQSTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottemHomeBtn"
                android:textColor="@color/initBackground"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myselfQSLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/myselfQSImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/myself1"/>
            <TextView
                android:id="@+id/myselfQSTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottemMyselfBtn"
                android:textColor="@color/initBackground"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/qsFramePager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/qsFrameBottemView">
    </android.support.v4.view.ViewPager>
</RelativeLayout>
