<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_myself"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grayBgc">

    <LinearLayout
        android:id="@+id/userHeadLayout"
        android:gravity="center"
        android:background="#ffffff"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/userHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/default_head"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/userName"
                android:text="终于要结课了"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/userPhone"
                android:text="18811439847"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/locMgt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#ffffff"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/locationImg"
            android:src="@drawable/location"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/locationMgt"
            android:layout_toRightOf="@id/locationImg"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/linearLayout_horizontal_margin"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/order_to_detail"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/cardMgt"
        android:layout_marginTop="@dimen/layout_vertical_margin"
        android:background="#ffffff"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/cardImg"
            android:src="@drawable/location"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/cardMgt"
            android:layout_toRightOf="@id/cardImg"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/linearLayout_horizontal_margin"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/order_to_detail"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/uploadFile"
        android:layout_marginTop="@dimen/layout_vertical_margin"
        android:background="#ffffff"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/uploadImg"
            android:src="@drawable/upload"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/uploadFile"
            android:layout_toRightOf="@id/uploadImg"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/linearLayout_horizontal_margin"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/order_to_detail"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/layout_vertical_margin"
        android:background="#ffffff"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/feedbackImg"
            android:src="@drawable/feedback"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/feedback"
            android:layout_toRightOf="@id/feedbackImg"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/linearLayout_horizontal_margin"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/order_to_detail"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/layout_vertical_margin"
        android:background="#ffffff"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/moreImg"
            android:src="@drawable/more_opt"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/moreOpt"
            android:layout_toRightOf="@id/moreImg"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/linearLayout_horizontal_margin"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/order_to_detail"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/customerService"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#ffffff"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/customerServicePhoneImg"
            android:src="@drawable/customer_service_phone"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/customerServicePhone"
            android:layout_toRightOf="@id/customerServicePhoneImg"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/linearLayout_horizontal_margin"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/order_to_detail"/>
    </RelativeLayout>
</LinearLayout>
